--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
   </head>
 
   <body>
+    <div class="container">
+      <h1>Bono Vision</h1>
+
+      <div class="bookmarklet">
+        <a href="javascript:(function(){window.s127=document.createElement('script');window.s127.setAttribute('type','text/javascript');window.s127.setAttribute('src','https://github.com/individual11/bono-vision/raw/master/bono-vision.js');document.getElementsByTagName('body')[0].appendChild(window.s127);})();">DRAG TO BOOKMARK BAR</a>
+      </div>
+    </div>
 
   </body>
   </html>
