added the logo image

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <meta name="author" content="David Vogeleer <david@individual11.com>">
 
     <!-- styles for this template -->
-    <link href="public/css/main.css" rel="stylesheet">	
+    <link href="public/css/main.css" rel="stylesheet">
 
 
   </head>
 
   <body>
     <div class="container">
-      <h1>Bono Vision</h1>
+      <h1>
+        <img src="public/img/logo.jpg" alt="Bono Vision" />
+      </h1>
 
       <div class="bookmarklet">
         <a href="javascript:(function(){window.s127=document.createElement('script');window.s127.setAttribute('type','text/javascript');window.s127.setAttribute('src','https://raw.github.com/individual11/bono-vision/master/bono-vision.min.js');document.getElementsByTagName('body')[0].appendChild(window.s127);})();">DRAG TO BOOKMARK BAR</a>
