--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
       <h1>
         <img src="public/img/logo.jpg" alt="Bono Vision" />
       </h1>
-
+      <p>Pariatur nostrud dolor et commodo anim sint.</p>
       <div class="bookmarklet">
-        <a href="javascript:(function(){window.s127=document.createElement('script');window.s127.setAttribute('type','text/javascript');window.s127.setAttribute('src','https://raw.github.com/individual11/bono-vision/master/bono-vision.min.js');document.getElementsByTagName('body')[0].appendChild(window.s127);})();">DRAG TO BOOKMARK BAR</a>
+        <a href="javascript:(function(){window.s127=document.createElement('script');window.s127.setAttribute('type','text/javascript');window.s127.setAttribute('src','https://raw.github.com/individual11/bono-vision/master/bono-vision.min.js');document.getElementsByTagName('body')[0].appendChild(window.s127);})();">
+          <img src="public/img/glasses.jpg" alt="Bono Vision Bookmarklet, drag to bookmarks bar." />
+        </a>
       </div>
     </div>
 
