adding the amnesty logo

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
         <a href="javascript:(function(){window.s127=document.createElement('script');window.s127.setAttribute('type','text/javascript');window.s127.setAttribute('src','https://raw.github.com/individual11/bono-vision/master/bono-vision.min.js');document.getElementsByTagName('body')[0].appendChild(window.s127);})();">
           <img src="public/img/glasses.jpg" alt="Bono Vision Bookmarklet, drag to bookmarks bar." />
         </a>
-      </div>
-    </div>
-
+      </div><!-- /bookmarklet -->
+    </div><!-- /container -->
+    <div class="charity">
+      <a href="#">
+        <img src="public/img/amnesty.jpg" alt="Amnesty International" />
+      </a>
+    </div><!-- /charity -->
   </body>
-  </html>
+</html>
