--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="public/img/logo.jpg" alt="Bono Vision" />
       </h1>
       <div class="bookmarklet">
-        <a href="javascript:(function(){window.s127=document.createElement('script');window.s127.setAttribute('type','text/javascript');window.s127.setAttribute('src','https://raw.github.com/individual11/bono-vision/master/bono-vision.min.js');document.getElementsByTagName('body')[0].appendChild(window.s127);})();">
+        <a href="javascript:(function(){window.s217=document.createElement('script');window.s217.setAttribute('type','text/javascript');window.s217.setAttribute('src','http://bookmarkify.it/bookmarklets/2276/raw');document.getElementsByTagName('body')[0].appendChild(window.s217);})();">
           <img id="glasses" src="public/img/glasses.jpg" alt="Bono Vision Bookmarklet, drag to bookmarks bar." />
         </a>
       </div><!-- /bookmarklet -->
