added some social stuff and google anylitics

--- a/index.html
+++ b/index.html
@@ -5,7 +5,31 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO -->
     <meta name="description" content="A bookmarklet to see any web page the way Bono sees the world.">
+    <link rel="canonical" href="http://individual11.github.io/bono-vision/">
+
+    <!-- Social: Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@missinglink">
+    <meta name="twitter:creator" content="missinglink">
+    <meta name="twitter:title" content="Bono Vision">
+    <meta name="twitter:description" content="A bookmarklet to see any web page the way Bono sees the world.">
+    <meta name="twitter:image:src" content="http://individual11.github.io/bono-vision/public/img/glasses.jpg">
+
+    <!-- Social: Facebook / Open Graph -->
+    <meta property="og:url" content="http://individual11.github.io/bono-vision/">
+    <meta property="og:type" content="tool">
+    <meta property="og:title" content="Bono Vision">
+    <meta property="og:image" content="http://individual11.github.io/bono-vision/public/img/glasses.jpg"/>
+    <meta property="og:description" content="A bookmarklet to see any web page the way Bono sees the world.">
+    <meta property="og:site_name" content="Bono Vision">
+
+    <!-- Social: Google+ / Schema.org  -->
+    <meta itemprop="name" content="Bono Vision">
+    <meta itemprop="description" content="A bookmarklet to see any web page the way Bono sees the world.">
+    <meta itemprop="image" content="http://individual11.github.io/bono-vision/public/img/glasses.jpg">
 
     <!-- styles for this template -->
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
@@ -21,14 +45,14 @@
       </h1>
       <div class="bookmarklet">
         <a href="javascript:(function(){window.s217=document.createElement('script');window.s217.setAttribute('type','text/javascript');window.s217.setAttribute('src','http://bookmarkify.it/bookmarklets/2276/raw');document.getElementsByTagName('body')[0].appendChild(window.s217);})();">
-          <img id="glasses" src="public/img/glasses.jpg" alt="Bono Vision Bookmarklet, drag to bookmarks bar." />
+          <img id="glasses" src="public/img/glasses.jpg" alt="Bono Vision" />
         </a>
       </div><!-- /bookmarklet -->
-      <div>
+      <div><!-- info -->
           <div class="bump">Drag the glasses to your bookmark bar</div>
           <div class="green bump"><em>then</em></div>
           <div class="bump">click or tap the button to activate<br />BonoVision wherever you go</div>
-      </div>
+      </div><!--/info -->
 
     </div><!-- /container -->
     <div class="mobile">
@@ -69,6 +93,16 @@
 
                 }
             });
+    </script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-48837865-3', 'auto');
+      ga('send', 'pageview');
     </script>
   </body>
 </html>
