made the path to the JS https to work on more sites

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <img src="public/img/logo.jpg" alt="Bono Vision" />
       </h1>
       <div class="bookmarklet">
-        <a href="javascript:(function(){window.s217=document.createElement('script');window.s217.setAttribute('type','text/javascript');window.s217.setAttribute('src','http://bookmarkify.it/bookmarklets/2276/raw');document.getElementsByTagName('body')[0].appendChild(window.s217);})();">
+        <a href="javascript:(function(){window.s217=document.createElement('script');window.s217.setAttribute('type','text/javascript');window.s217.setAttribute('src','https://bookmarkify.it/bookmarklets/2276/raw');document.getElementsByTagName('body')[0].appendChild(window.s217);})();">
           <img id="glasses" src="public/img/glasses.jpg" alt="Bono Vision" />
         </a>
       </div><!-- /bookmarklet -->
