--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div><!-- info -->
           <div class="bump">Drag the glasses to your bookmark bar</div>
           <div class="green bump"><em>then</em></div>
-          <div class="bump">click or tap the button to activate<br />BonoVision wherever you go</div>
+          <div class="bump">click the button to activate<br />BonoVision wherever you go</div>
       </div><!--/info -->
 
     </div><!-- /container -->
