--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link href="public/css/main.css" rel="stylesheet">
 
+    <link rel="shortcut icon" href="public/img/BonoVision.png" />
+
 
   </head>
 
